Compile, test and run under Java 9.