@@ -51,14 +51,33 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
+            <!-- in JDK 8, not in Java 9 -->
+            <!-- 
             <exclusions>
                 <exclusion>
-                    <!-- in JDK -->
                     <groupId>javax.activation</groupId>
                     <artifactId>activation</artifactId>
                 </exclusion>
             </exclusions>
+            -->
         </dependency>
+        <!-- in JDK 8, not in Java 9 -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <!-- AnnotationReader not in reference implementation -->
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>        
         <!-- API documentation -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -152,6 +171,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <!-- fix for Java 9 -->
+                <artifactId>hibernate-validator</artifactId>
+                <groupId>org.hibernate</groupId>
+                <version>5.2.3.Final</version>
+            </dependency>
+            <dependency>
                 <!-- needed by Selenium -->
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -170,6 +195,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <excludes>
+                        <exclude>module-info.java</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                 <!-- mvn test-compile failsafe:integration-test failsafe:verify -->
@@ -193,6 +228,32 @@
 
     <profiles>
         <profile>
+            <!-- mvn -Djdk.version=9 clean verify -->
+            <id>jdk-9-above</id>
+            <activation>
+                <property>
+                    <name>jdk.version</name>
+                </property>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>${jdk.version}</source>
+                            <target>${jdk.version}</target>
+                            <compilerArgs>
+                                <arg>--add-modules</arg>
+                                <arg>java.xml.bind</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <!-- mvn verify -DskipTests -P dependency-check -->
             <id>dependency-check</id>
             <properties>
                 <dependency-check>true</dependency-check>
@@ -201,7 +262,6 @@
             <build>
                 <plugins>
                     <plugin>
-                        <!-- mvn verify -DskipTests -P dependency-check -->
                         <groupId>org.owasp</groupId>
                         <artifactId>dependency-check-maven</artifactId>
                         <version>5.3.2</version>
@@ -211,9 +271,9 @@
                         </configuration>
                         <executions>
                             <execution>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
